Fixed horizontal overflow on all components styling

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ h1, h2 {
 }
 
 #App {
-  width:100vw;
+  width:100%;
   height:100vh;
   text-align: center;
   color: white;
@@ -67,7 +67,7 @@ h1, h2 {
   padding-top: 20px;
   padding-bottom: 20px;
   height: auto;
-  width: 100vw;
+  width: 100%;
   background-color: rgb(34, 34, 34)
 }
 
