--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,7 @@
 .About {
     padding-top:46px;
     height: 900px;
-    width: 100vw;
+    width: 100%;
     background-image: url("../../assets/galaxy.jpg");
     background-repeat: no-repeat;
     background-size: cover;
