--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,6 +1,6 @@
 .Contact {
     height: auto;
-    width: 100vw;
+    width: 100%;
     background-color: rgb(0, 80, 90);
     padding-bottom: 20px;
 }
