--- a/src/components/Expertise/Expertise.css
+++ b/src/components/Expertise/Expertise.css
@@ -1,5 +1,5 @@
 .Expertise {
-    width: 100vw;
+    width: 100%;
     height: 500px;
     padding-bottom: 20px;
     background: linear-gradient(rgb(6, 7, 9), rgb(64, 88, 95));
