--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,6 +1,6 @@
 .Projects {
     color: black;
-    width: 100vw;
+    width: 100%;
     height: auto;
     /* border: 2px solid blue; */
 }
